security: enhance OAuth2 user registration with auto-registration, email notifications, and improved username generation